release 1.1.2-ea (2009-09)
- Ensure that ContainerResponseWriter.finish is called consistently, for example
  when no response entity is present.
- Cleaned up declaration of checked exceptions from the abstract message body
  reader/writer classes for JAXB and removed the declaration of IOException.
- Fixed issue 334
  https://jersey.dev.java.net/issues/show_bug.cgi?id=334
  UriBuilder.segment and UriBuilder.matrixParam should percent encode ';'
  characters.
- Adding logging when Jersey cannot map an exception to a Response using
  registered ExceptionMapper and the exception gets re-thrown to the HTTP
  container.
- Fixed issue 280
  https://jersey.dev.java.net/issues/show_bug.cgi?id=280
  For the "natural" JSON convention, the humanReadableFormatting option
  now could be set, so that the output JSON contains new-line characters
  and indentation, which makes is easy to read for humans
- Upgraded Jackson library to the version 1.1.1, so that people
  relying on Jackson JAX-RS entity provider does not need to depend on two versions
  of the very same library at their applications 
- Fixed issue, working around a JDK bug in the method URL.toURI() when package
  scanning classes that are present in a directory path location containing
  space characters, for example "Documents and Services".
- Fixed issue 331
  https://jersey.dev.java.net/issues/show_bug.cgi?id=331
  Add support for de/serializing instances of org.w3c.dom.Document.
- Fixed issue 326
  https://jersey.dev.java.net/issues/show_bug.cgi?id=326
  Work around bug 5087240 in the JDK:
  http://bugs.sun.com/view_bug.do?bug_id=5087240
- Fixed issue 330
  https://jersey.dev.java.net/issues/show_bug.cgi?id=330
  ContainerRequest and ContainerResponse by may now be adapted from within
  filters by extending AdaptingContainerRequest and AdaptingContainerResponse
  respectively. The adapter CachedEntityContainerRequest is available for when
  a request entity instance consumed by a filter needs to be cached.