@@ -1,4 +1,13 @@
 release 1.1.2-ea (2009-09)
+- Fixed issue 337
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=337
+  The LW HTTP container logs an IOException (passed from Jersey) and attempts
+  to set the status code to 500. If the statuss and headers are already
+  committed it is not possible to set the status code and the response will be
+  terminated prematurely.
+- Fixed issue 276
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=276
+  Ensure that localized messages are correctly resolved in Web containers.
 - Ensure that ContainerResponseWriter.finish is called consistently, for example
   when no response entity is present.
 - Cleaned up declaration of checked exceptions from the abstract message body
